--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dot-env": "^0.0.1",
     "express": "^4.18.2",
+    "mongoose": "^7.5.1",
     "morgan": "^1.10.0"
   }
 }
